# content-dreamer.ai

./: README.md  spec.md
client/: next.config.ts  package-lock.json  package.json  restart.sh
client/content-dreamer.ai/: package-lock.json  (+1 more)
server/: .env.example  .gitignore  admin_auth.py  app.py  auth_utils.py  cache.py  coaching_utils.py  commands.py  config.py  email_utils.py  events.py  fcm_utils.py  firebase.json  openai_utils.py  plans.py  pyproject.toml  queue_util.py  requirements-dev.txt  requirements.txt  restart.sh  seeds.py  server.sh  sms_utils.py  stripe_util.py  validation_utils.py  views.py  views_auth.py  views_reports.py  views_staff.py  worker.sh  workers.py
server/clients/: gemini_client.py  medium_client.py  serp_client.py  thinking_client.py  twitter_client.py
server/migrations/versions/: 20251008_add_memes_image_bytes.py  20251008_add_memes_image_path.py  20251008_add_memes_table.py  20251008_add_slops_table.py  20251008_add_video_gen_count_to_usage_quota.py  54d8efab46cd_add_initial.py  5b919781deb4_add_guest_id_to_user_table.py  cffce3041414_plan_id_constraint_chaange.py  d9db3a932297_add_description_column_to_article_table.py
server/models/: admin_staff.py  article.py  credit_ledger.py  device_token.py  meme.py  otp.py  password_reset.py  product.py  report.py  report_step.py  slop.py  subscription.py  suggestion.py  user.py
server/static/css/: style.css
server/static/js/: main.js
server/templates/: privacy.html  terms.html
server/templates/staff/: _list_styles.html  dashboard.html  login.html
server/tests/: __init__.py
(+28 files in other folders)
